@startuml

class CosClient
interface BucketOperation
class CosRequest
class CosResponse

BucketOperation <|-- BucketOperationImpl

CosClient --> BucketOperation: 创建基于Bucket操作

BucketOperationImpl --> CosRequest:发起HTTP请求
CosRequest -right-> CosResponse: 获取返回结果
BucketOperationImpl <-- CosResponse: 返回给调用者

@enduml